--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 
-<html lang="">
+<html>
 
 <head>
 	<meta charset="utf-8">
-	<title>AllStars</title>
+	<title>AllStars Sports Bar</title>
 	<meta name="author" content="Toby B">
 	<meta name="description" content="AllStars Sports Bar, based in the  south west of the UK">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="styles.css">
-	<link rel="icon" type="image/x-icon" href=""/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+
+  <!--favicon from https://realfavicongenerator.net/ -->
+  <!--optimised favicon, imgs for different devices with prefixed code for it -->
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 </head>
 
 <body>
-  <!-------------HEADER BANNER------------------->
+  <!--- HEADER BANNER --->
   <header>
 
-    <!------ nav bar ---->
+    <!--- nav bar --->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">AllstarsLogohere</a>
+  <a class="navbar-brand" href="#" > <img src="images/AllStarsLogo.png" alt="All Stars Sports Bar" width="30%"> </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -64,56 +76,70 @@
     </ul>
   </div>
 </nav>
-    <!----- Nav bar end ---->
+    <!--- Nav bar end --->
 
+		<!--- Trio of boxes --->
+		<div class="container-fluid" id="card-section">
+		    <div class="row">
+		      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+		        <div class="discount-card"></div>
+		      </div>
 
+		      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+		        <div class="parties"></div>
+		      </div>
 
-<!--- Trio of boxes --->
-<div class="container-fluid">
-  <div class="">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <div class="">
-
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <div class="">
-
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-        <div class="">
-
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+		      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+		        <div class="food"></div>
+		      </div>
+		    </div>
+		</div>
 
 
 
 
-<div class="container-fluid">
-  <div class="row">
-    <!--- venue banner --->
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"></div>
+		<div class="container-fluid">
+		  <div class="row">
+		    <!--- venue banner --->
+		    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		      <div class="venue-banner">
 
-    <!--- social banner --->
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12"></div>
-  </div>
-</div>
+		      </div>
+		    </div>
+
+		    <!--- social banner --->
+		    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		      <div class="social-banner">
+
+		      </div>
+		    </div>
+		  </div>
+		</div>
 
 
-<style media="screen">
-container-fluid{padding-left:0px; padding-right:0px;}
-</style>
 
 
+
+
+		<footer>
+		  <div class="row">
+		    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+		      <div class="footer-left">
+
+		      </div>
+		    </div>
+		    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+		      <div class="footer-mid">
+
+		      </div>
+		    </div>
+		    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+		      <div class="footer-right">
+
+		      </div>
+		    </div>
+		  </div>
+		</footer>
 
 </body>
-<footer></footer>
-
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-
 </html>
