--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
-
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<title>AllStars Sports Bar</title>
-	<meta name="author" content="Toby B">
-	<meta name="description" content="AllStars Sports Bar, based in the  south west of the UK">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- meta tags to help SEO -->
+  <meta charset="utf-8">
+  <title>AllStars Sports Bar</title>
+  <meta name="author" content="Toby B">
+  <meta name="description" content="AllStars Sports Bar, based in the  south west of the UK">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--CDNs to Boostrap CSS, JQuery, And Bootstrap JS And my own stylesheet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
 
   <!--favicon from https://realfavicongenerator.net/ -->
-  <!--optimised favicon, imgs for different devices with prefixed code for it -->
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
+  <!--optimised favicon, imgs for different devices with prefixed code for it this allows for the little icon in the top of the tab-->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
 </head>
 
@@ -30,116 +31,100 @@
   <header>
 
     <!--- nav bar --->
+    <!-- used a bootstrap component with minor alterations to tailor it to requirments and standardised web dev pratices -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#" > <img src="images/AllStarsLogo.png" alt="All Stars Sports Bar" width="30%"> </a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Venues
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Bristol</a>
-          <a class="dropdown-item" href="#">Taunton</a>
-          <a class="dropdown-item" href="#">Exeter</a>
-          <a class="dropdown-item" href="#">Weston-Super-Mare</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Live Sports</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Events</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Food</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Discounts</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">FAQs</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Parties</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
+      <a class="navbar-brand" href="#"> <img src="images/AllStarsLogo.png" alt="All Stars Sports Bar" width="30%"> </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Venues
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Bristol</a>
+              <a class="dropdown-item" href="#">Taunton</a>
+              <a class="dropdown-item" href="#">Exeter</a>
+              <a class="dropdown-item" href="#">Weston-Super-Mare</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Live Sports</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Events</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Food</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Discounts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">FAQs</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Parties</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
 
-    </ul>
-  </div>
-</nav>
+        </ul>
+      </div>
+    </nav>
     <!--- Nav bar end --->
 
-		<!--- Trio of boxes --->
-		<div class="container-fluid" id="card-section">
-		    <div class="row">
-		      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-		        <div class="discount-card"></div>
-		      </div>
+    <!--- Trio of boxes --->
 
-		      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-		        <div class="parties"></div>
-		      </div>
+    <div class="container">
+      <div class="main-content-area">
+        <h2>content area</h2>
+      </div>
+    </div>
 
-		      <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-		        <div class="food"></div>
-		      </div>
-		    </div>
-		</div>
+    <!--- Trio of boxes --->
+    <div class="container-fluid">
+      <div class="card-section">
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="discount-card">
+              <h3>Discount card</h3>
+            </div>
+          </div>
 
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="parties">
+              <h3>Parties</h3>
+            </div>
+          </div>
 
+          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="food">
+              <h3>Food</h3>
+            </div>
+          </div>
+        </div>
+      </div>
 
-
-		<div class="container-fluid">
-		  <div class="row">
-		    <!--- venue banner --->
-		    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		      <div class="venue-banner">
-
-		      </div>
-		    </div>
-
-		    <!--- social banner --->
-		    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		      <div class="social-banner">
-
-		      </div>
-		    </div>
-		  </div>
-		</div>
-
-
+      <div class="container-fluid">
+        <div class="venue-bar">
+          <h3>Venue bar lol</h3>
+        </div>
+      </div>
 
 
-
-
-		<footer>
-		  <div class="row">
-		    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-		      <div class="footer-left">
-
-		      </div>
-		    </div>
-		    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-		      <div class="footer-mid">
-
-		      </div>
-		    </div>
-		    <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-		      <div class="footer-right">
-
-		      </div>
-		    </div>
-		  </div>
-		</footer>
+      <div class="container-fluid">
+        <div class="social-bar">
+          <h3>Social bar lol</h3>
+        </div>
+      </div>
 
 </body>
+
 </html>
