--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>AllStars Sports Bar</title>
   <meta name="author" content="Toby B">
   <meta name="description" content="AllStars Sports Bar, based in the  south west of the UK">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+
   <!--CDNs to Boostrap CSS, JQuery, And Bootstrap JS And my own stylesheet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
@@ -81,49 +82,85 @@
     <!--- Nav bar end --->
 
     <!--- Trio of boxes --->
-
     <div class="container">
       <div class="main-content-area">
         <h2>content area</h2>
       </div>
     </div>
 
+
     <!--- Trio of boxes --->
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="discount-card">
+            <h3>Discount card</h3>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="parties">
+            <h3>Parties</h3>
+          </div>
+        </div>
+
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="food">
+            <h3>Food</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="container-fluid">
-      <div class="card-section">
+      <div class="venue-bar">
+        <h3>Venue bar lol</h3>
+        <button>Click here</button>
+      </div>
+    </div>
+
+
+    <div class="container-fluid">
+      <div class="social-bar">
+        <h3>Social bar lol</h3>
+        <button>Click here</button>
+      </div>
+    </div>
+
+    <footer>
+      <div class="container-fluid">
         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="discount-card">
-              <h3>Discount card</h3>
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="footer-left">
+
+              <p>contact address</p>
+              <p>contact postcode</p>
             </div>
           </div>
-
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="parties">
-              <h3>Parties</h3>
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="footer-middle">
+              <p>FAQ's</p>
+              <p>TERMS</p>
+              <p>PRIVACY POLICY</p>
             </div>
           </div>
+          <div class="col-sm-12 col-md-4 col-lg-4">
+            <div class="footer-right">
+              <p>contact number</p>
+              <p>contact email@@@@@@@</p>
 
-          <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-            <div class="food">
-              <h3>Food</h3>
+              <img class="facebook-icon" src="images/facebook.png" alt="">
+
+              <img class="linkedin-icon" src="images/linkedin.png">
             </div>
           </div>
         </div>
       </div>
 
-      <div class="container-fluid">
-        <div class="venue-bar">
-          <h3>Venue bar lol</h3>
-        </div>
-      </div>
+    </footer>
 
 
-      <div class="container-fluid">
-        <div class="social-bar">
-          <h3>Social bar lol</h3>
-        </div>
-      </div>
+
 
 </body>
 
