--- a/events.html
+++ b/events.html
@@ -100,12 +100,105 @@
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div class="sports-on">
-            <h2>Live sports on</h2>
+
+    <div class="container">
+        <div class="events-section">
+            <h2>Allstars SPORTS Events</h2>
+
+            <div class="container-fluid">
+                <div class="events-locations">
+
+                    <div class="location-one">
+                        <h3>Taunton</h3>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Pool</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Snooker</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Darts</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Quizzes & other events</strong></p>
+                                <p>example text<p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="location-two">
+                        <h3>Bristol</h3>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Pool</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Snooker</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Darts</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Quizzes & other events</strong></p>
+                                <p>example text</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="location-three">
+                        <h3>Weston</h3>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Pool</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Snooker</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Darts</strong></h3>
+                                    <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Quizzes & other events</strong></p>
+                                <p>example text</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="location-four">
+                        <h3>Exeter</h3>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Pool</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Snooker</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Darts</strong></p>
+                                <p>example text</p>
+                            </div>
+                            <div class="col-sm-12 col-md-3 col-lg-3">
+                                <p><strong>Quizzes & other events</strong></p>
+                                <p>example text</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
 
     <div class="container-fluid">
         <div class="venue-bar">
@@ -126,7 +219,6 @@
             <div class="social-facebook-icons" id="facebook-four"></div>
         </div>
     </div>
-
 
     <footer>
         <div class="container-fluid">
