--- a/food.html
+++ b/food.html
@@ -100,9 +100,23 @@
         </div>
     </div>
 
+
     <div class="container-fluid">
-        <div class="sports-on">
-            <h2>Live sports on</h2>
+        <div class="menu-selection">
+            <div class="row">
+                <div class="col-sm-12 col-md-3 col-lg-3">
+                    <button>menu 1</button>
+                </div>
+                <div class="col-sm-12 col-md-3 col-lg-3">
+                    <button>menu 2</button>
+                </div>
+                <div class="col-sm-12 col-md-3 col-lg-3">
+                    <button>menu 3</button>
+                </div>
+                <div class="col-sm-12 col-md-3 col-lg-3">
+                    <button>menu 4</button>
+                </div>
+            </div>
         </div>
     </div>
 
