--- a/index.html
+++ b/index.html
@@ -100,9 +100,27 @@
         </div>
     </div>
 
-    <div class="container-fluid">
-        <div class="sports-on">
-            <h2>Live sports on</h2>
+
+    <!--- Trio of boxes --->
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="discount-card">
+                    <h3>Discount card</h3>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="parties">
+                    <h3>Parties</h3>
+                </div>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="food">
+                    <h3>Food</h3>
+                </div>
+            </div>
         </div>
     </div>
 
