--- a/livesports.html
+++ b/livesports.html
@@ -31,7 +31,6 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
@@ -91,20 +90,28 @@
         <!--- Nav bar end --->
     </header>
 
+    <div class="livesports-page jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1>Fluid jumbotron</h1>
+            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        </div>
+    </div>
 
-    <!--- Trio of boxes --->
 
     <div class="container">
         <div class="main-content-area">
             <h2>content area</h2>
+            <P>exampletext</P>
         </div>
     </div>
+
 
     <div class="container-fluid">
         <div class="sports-on">
             <h2>Live sports on</h2>
         </div>
     </div>
+
 
 
     <div class="container-fluid">
@@ -114,7 +121,7 @@
         </div>
     </div>
 
-
+    <!--social and venue banner -->
     <div class="container-fluid">
         <div class="social-bar">
             <h3>Social bar</h3>
