--- a/food.html
+++ b/food.html
@@ -31,7 +31,6 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
@@ -91,12 +90,17 @@
         <!--- Nav bar end --->
     </header>
 
-
-    <!--- Trio of boxes --->
+    <div class="food-page jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1>Fluid jumbotron</h1>
+            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        </div>
+    </div>
 
     <div class="container">
         <div class="main-content-area">
             <h2>content area</h2>
+            <P>exampletext</P>
         </div>
     </div>
 
@@ -120,7 +124,7 @@
         </div>
     </div>
 
-
+    <!--social and venue banner -->
     <div class="container-fluid">
         <div class="venue-bar">
             <h3>Venue bar</h3>
