--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
@@ -92,11 +91,19 @@
     </header>
 
 
-    <!--- Trio of boxes --->
+    <div class="home-page jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1>Fluid jumbotron</h1>
+            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        </div>
+    </div>
 
+
+    <!--- Trio of boxes --->
     <div class="container">
         <div class="main-content-area">
             <h2>content area</h2>
+            <P>exampletext</P>
         </div>
     </div>
 
@@ -125,6 +132,7 @@
     </div>
 
 
+    <!--social and venue banner -->
     <div class="container-fluid">
         <div class="venue-bar">
             <h3>Venue bar</h3>
@@ -144,7 +152,6 @@
             <div class="social-facebook-icons" id="facebook-four"></div>
         </div>
     </div>
-
 
     <footer>
         <div class="container-fluid">
@@ -174,7 +181,9 @@
         </div>
 
     </footer>
+
     <script src="app.js"></script>
+
 </body>
 
 </html>
