--- a/index.html
+++ b/index.html
@@ -91,15 +91,31 @@
     </header>
 
 
-    <div class="home-page jumbotron jumbotron-fluid">
-        <div class="container">
-            <h1>Fluid jumbotron</h1>
-            <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+
+    <div class="container-fluid">
+        <div class="home-page-slider">
+            <div class="container">
+                <h1>Fluid jumbotron</h1>
+                <p>This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+            </div>
+
+            <div class="home-page-one">
+            </div>
+
+            <div class="home-page-two">
+            </div>
+
+            <div class="home-page-three">
+            </div>
+
+            <div class="home-page-four">
+            </div>
         </div>
     </div>
 
 
     <!--- Trio of boxes --->
+
     <div class="container">
         <div class="main-content-area">
             <h2>content area</h2>
@@ -153,6 +169,7 @@
         </div>
     </div>
 
+
     <footer>
         <div class="container-fluid">
             <div class="row">
@@ -173,6 +190,7 @@
                     <div class="footer-right">
                         <p>contact number</p>
                         <p>contact email@@@@@@@</p>
+
                         <img src="images/facebook.png" class="facebook-icon" alt="Facebook">
                         <img src="images/linkedin.png" class="linkedin-icon" alt="LinkedIn">
                     </div>
@@ -180,7 +198,10 @@
             </div>
         </div>
 
+
+
     </footer>
+
 
     <script src="app.js"></script>
 
