--- a/events.html
+++ b/events.html
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 
@@ -90,6 +90,7 @@
         <!--- Nav bar end --->
     </header>
 
+
     <div class="events-page jumbotron jumbotron-fluid">
         <div class="container">
             <h1>Fluid jumbotron</h1>
@@ -97,12 +98,14 @@
         </div>
     </div>
 
+
     <div class="container">
         <div class="main-content-area">
             <h2>content area</h2>
             <P>exampletext</P>
         </div>
     </div>
+
 
     <div class="container">
         <div class="events-section">
@@ -204,6 +207,7 @@
         </div>
     </div>
 
+
     <!--social and venue banner -->
     <div class="container-fluid">
         <div class="venue-bar">
@@ -224,6 +228,7 @@
             <div class="social-facebook-icons" id="facebook-four"></div>
         </div>
     </div>
+
 
     <footer>
         <div class="container-fluid">
@@ -254,6 +259,9 @@
 
     </footer>
     <script src="app.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 
 </html>
