--- a/privacy.html
+++ b/privacy.html
@@ -42,7 +42,7 @@
         <!--- nav bar --->
         <!-- used a bootstrap component with minor alterations to tailor it to requirments and standardised web dev pratices -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#"> <img src="images/AllStarsLogo.png" alt="All Stars Sports Bar" width="30%"> </a>
+            <a class="navbar-brand" href="#"> <img src="img/AllStarsLogo.png" alt="All Stars Sports Bar" width="30%"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
